# octopus

./: .gitignore  Cargo.toml  Makefile  README.md  build.rs  config.tpl  docker-compose.yaml  makefile.sh  service.json  zk.json
proto/: orm.proto
src/: config.rs  db.rs  main.rs  mem.rs  table.rs
src/config/: config.rs  mod.rs  provider.rs
src/dal/: access.rs  adapter.rs  dao.rs  db.rs  db_access.rs  error.rs  interface.rs  lua.rs  mem.rs  mod.rs  route.rs  support.rs  table.rs  utils.rs  value.rs
src/db/: db.rs  formatter.rs  lua.rs  mod.rs  table.rs  value.rs
src/discovery/: mod.rs  register.rs  zk.rs
src/proto/: mod.rs  orm.rs  orm_grpc.rs
src/server/: grpc.rs  mod.rs
src/service_discovery/: zk.rs
tests/: TbTestModel.sql
