[package]
name = "octopus"
description = "Multi-database management bus."
repository = "https://github.com/snlansky/octopus"
version = "0.1.0"
authors = ["snlansky <snlansky@gmail.com>"]

[dependencies]
mysql = "15.0.0"
redis = "0.9.1"
sha1 = "0.6.0"
serde = "1.0.88"
serde_json = "1.0.37"
serde_derive = "1.0.88"
failure = "0.1.5"
log = "0.4.6"
env_logger = "0.6.0"
zookeeper = "0.5.5"
threadpool = "1.7.1"
clap = "2.32.0"
#grpc = "0.6.1"
#protobuf = "2.3.0"

[build-dependencies]
protoc-rust-grpc = "0.6.1"